# eq-overlay

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  rares.toml  run-overlay.cmd
.github/workflows/: release.yml
crates/eq-cli/: Cargo.toml
crates/eq-cli/src/: gen.rs  main.rs
crates/eq-core/: Cargo.toml
crates/eq-core/examples/: dump_icons.rs  dump_sheet.rs
crates/eq-core/src/: audio.rs  config.rs  duration.rs  events.rs  lib.rs  parser.rs  pipeline.rs  spelldb.rs  tailer.rs  triggers.rs
crates/eq-core/tests/: integration.rs
crates/eq-overlay-gui/: Cargo.toml
crates/eq-overlay-gui/src/: app.rs  main.rs  shortcuts.rs  updater.rs
