[package]
name = "eq-core"
description = "Core log-tailing + trigger engine for an EverQuest overlay"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
notify.workspace = true
aho-corasick.workspace = true
regex.workspace = true
rodio.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Only for the `dump_icons` example (icon-set comparison), not the library.
image = { version = "0.25", default-features = false, features = ["tga", "png"] }
